tests/ui/pattern/usefulness/rustfix-unreachable-pattern.stderr
error: unreachable pattern
  --> $DIR/rustfix-unreachable-pattern.rs:14:9
   |
LL |         Err(_) => {}
   |         ^^^^^^------
   |         |
   |         matches no values because `Void` is uninhabited
   |         help: remove the match arm
   |
   = note: to learn more about uninhabited types, see https://doc.rust-lang.org/nomicon/exotic-sizes.html#empty-types
note: the lint level is defined here
  --> $DIR/rustfix-unreachable-pattern.rs:5:9
   |
LL | #![deny(unreachable_patterns)]
   |         ^^^^^^^^^^^^^^^^^^^^

error: unreachable pattern
  --> $DIR/rustfix-unreachable-pattern.rs:15:9
   |
LL |         Err(_) => {},
   |         ^^^^^^-------
   |         |
   |         matches no values because `Void` is uninhabited
   |         help: remove the match arm
   |
   = note: to learn more about uninhabited types, see https://doc.rust-lang.org/nomicon/exotic-sizes.html#empty-types

error: unreachable pattern
  --> $DIR/rustfix-unreachable-pattern.rs:20:9
   |
LL |         Err(!),
   |         ^^^^^^-
   |         |
   |         matches no values because `Void` is uninhabited
   |         help: remove the match arm
   |
   = note: to learn more about uninhabited types, see https://doc.rust-lang.org/nomicon/exotic-sizes.html#empty-types

error: unreachable pattern
  --> $DIR/rustfix-unreachable-pattern.rs:21:9
   |
LL |         Err(!)
   |         ^^^^^^
   |         |
   |         matches no values because `Void` is uninhabited
   |         help: remove the match arm
   |
   = note: to learn more about uninhabited types, see https://doc.rust-lang.org/nomicon/exotic-sizes.html#empty-types

error: aborting due to 4 previous errors

